[locale] updating the locale

--- a/locale/en/LC_MESSAGES/interactions/chapter-11.po
+++ b/locale/en/LC_MESSAGES/interactions/chapter-11.po
@@ -1,22 +1,24 @@
 # SOME DESCRIPTIVE TITLE.
-# Copyright (C) 2010-2022 Daniel Kastl, Vicky Vergara, Rajat Shinde
+# Copyright (C) 2010-2023 pgRouting Developers
 # This file is distributed under the same license as the Workshop FOSS4G
-# Firenze package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
+# Prizren package.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2023.
 #
 #, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: Workshop FOSS4G Firenze 2.8\n"
+"Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-08-05 17:38+0000\n"
+"POT-Creation-Date: 2023-05-20 15:49-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language: en\n"
+"Language-Team: en <LL@li.org>\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.10.3\n"
+"Generated-By: Babel 2.12.1\n"
 
 #: ../../build/docs/interactions/chapter-11.rst:13
 msgid "OpenLayers Based Routing Interface"
