(pot) updating the pot files

--- a/locale/pot/basic/data.pot
+++ b/locale/pot/basic/data.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-29 15:35+0000\n"
+"POT-Creation-Date: 2024-03-22 11:12-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -49,7 +49,7 @@ msgid "These requirements are met on OSGeoLive. When the required software is in
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:33
-msgid "If OSGeoLive is not being used, please refer to the chapter's appendix to set up the user \"user\"."
+msgid "If OSGeoLive is not being used, please refer to the chapter's appendix to set up the user ``user``."
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:36
@@ -69,7 +69,7 @@ msgid "Get the Workshop Data"
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:53
-msgid "The pgRouting workshop will make use of OpenStreetMap data, which is already available on `OSGeoLive <http://live.osgeo.org>`_. This workshop will use the ``Prizren`` city data and is a snapshot of March 2023."
+msgid "The pgRouting workshop will make use of OpenStreetMap data, which is already available on `OSGeoLive <https://live.osgeo.org>`_. This workshop will use the ``Prizren`` city data and is a snapshot of March 2023."
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:58
@@ -105,7 +105,7 @@ msgid "More information about how to download OpenStreetMap data can be found in
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:97
-msgid "An alternative for very large areas is to use the download services of `Geofabrik <http://download.geofabrik.de>`_."
+msgid "An alternative for very large areas is to use the download services of `Geofabrik <https://download.geofabrik.de>`_."
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:102
@@ -161,5 +161,5 @@ msgid "Chapter: Appendix"
 msgstr ""
 
 #: ../../build/docs/basic/data.rst:151
-msgid "OSGeoLive's account name on the database is ``\"user\"``. To easily use the workshop when not using OSGeoLive this extra steps are needed:"
+msgid "OSGeoLive's account name on the database is ``user``. To easily use the workshop when not using OSGeoLive this extra steps are needed:"
 msgstr ""
