--- a/locale/pot/basic/pedestrian.pot
+++ b/locale/pot/basic/pedestrian.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-29 15:35+0000\n"
+"POT-Creation-Date: 2024-03-22 11:12-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -33,7 +33,7 @@ msgid "pgr_dijkstra"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:27
-msgid "Dijkstra algorithm was the first algorithm implemented in pgRouting. It doesn't require other attributes than ``id``, ``source`` and ``target`` ID and ``cost`` and ``reverse_cost``."
+msgid "Dijkstra algorithm was the first algorithm implemented in pgRouting. It doesn't require other attributes than the identifiers ``id``, ``source`` and ``target`` and the weights ``cost`` and ``reverse_cost``."
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:31
@@ -98,23 +98,23 @@ msgid "Get the vertex identifiers"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:93
-msgid "|osmid_1| |place_1|  (|id_1|)"
+msgid "|osmid_1| |place_1| (|id_1|)"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:94
-msgid "|osmid_2| |place_2|  (|id_2|)"
+msgid "|osmid_2| |place_2| (|id_2|)"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:95
-msgid "|osmid_3| |place_3|  (|id_3|)"
+msgid "|osmid_3| |place_3| (|id_3|)"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:96
-msgid "|osmid_4| |place_4|  (|id_4|)"
+msgid "|osmid_4| |place_4| (|id_4|)"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:97
-msgid "|osmid_5| |place_5|  (|id_5|)"
+msgid "|osmid_5| |place_5| (|id_5|)"
 msgstr ""
 
 #: ../../build/docs/basic/pedestrian.rst:100
