--- a/locale/pot/interactions/chapter-10.pot
+++ b/locale/pot/interactions/chapter-10.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Workshop FOSS4G Prizren 2.9\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-05-20 15:49-0600\n"
+"POT-Creation-Date: 2024-03-22 11:12-0600\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -21,11 +21,11 @@ msgid "WMS server with GeoServer"
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:15
-msgid "Now that we have a pl/pgsql wrapper, we will make it available as a WMS layer using `GeoServer <http://geoserver.org/>`_."
+msgid "Now that we have a pl/pgsql wrapper, we will make it available as a WMS layer using `GeoServer <https://geoserver.org/>`_."
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:18
-msgid "The installation of GeoServer is out of the scope of this workshop, but if you're using the `OSGeo Live <http://live.osgeo.org>`_ for this workshop then you have GeoServer installed already."
+msgid "The installation of GeoServer is out of the scope of this workshop, but if you're using the `OSGeoLive <https://live.osgeo.org>`_ for this workshop then you have GeoServer installed already."
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:23
@@ -33,7 +33,7 @@ msgid "Connect to the administration page"
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:25
-msgid "In order to create the WMS layer, we need to connect to the administration interface of GeoServer. On `OSGeo LiveDVD <http://live.osgeo.org>`_ Desktop, open the *Applications* menu on the desktop and then *Geospatial* > *Web Services* > *GeoServer* > *Start GeoServer*."
+msgid "In order to create the WMS layer, we need to connect to the administration interface of GeoServer. On `OSGeoLive <https://live.osgeo.org>`_ Desktop, open the *Applications* menu on the desktop and then *Geospatial* > *Web Services* > *GeoServer* > *Start GeoServer*."
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:29
@@ -88,7 +88,7 @@ msgid "Namespace URI"
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:51
-msgid "``http://pgrouting.org``"
+msgid "``https://pgrouting.org``"
 msgstr ""
 
 #: ../../build/docs/interactions/chapter-10.rst:53
